objects/CustomObject3__c.object
<CustomObject>
    <description>旧JRI入力データ
Strategicテレマーケティングデータ
ME自動分析市場
旧IBM/ERP負け情報</description>
    <fields>
        <fullName>DI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field10__c</fullName>
        <defaultValue>false</defaultValue>
        <label>廃棄</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field16__c</fullName>
        <defaultValue>false</defaultValue>
        <description>固体付きの場合チェックして下さい</description>
        <label>固体付き</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field17__c</fullName>
        <defaultValue>false</defaultValue>
        <description>クライオ付きの場合　チェックして下さい</description>
        <label>クライオジェニック</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field20_del__c</fullName>
        <label>系列</label>
        <picklist>
            <picklistValues>
                <fullName>EM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JX</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Field5_del__c</fullName>
        <label>主な用途（固体）</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NameNo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>商談名</label>
        <referenceTo>SalesPipeline__c</referenceTo>
        <relationshipLabel>競合装置情報</relationshipLabel>
        <relationshipName>VictoryOrDefeatFactorNameNo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OLD_SFID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>旧環境SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PAL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PAL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P_T__c</fullName>
        <defaultValue>false</defaultValue>
        <label>P/T</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Py__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Py</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TG__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TG</label>
        <type>Checkbox</type>
    </fields>
    <label>競合装置情報</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Field3__c</columns>
        <columns>Field36__c</columns>
        <columns>Field19__c</columns>
        <columns>Field20_del__c</columns>
        <columns>Field1__c</columns>
        <columns>Field26__c</columns>
        <columns>Field10__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <listViews>
        <fullName>IBM_ERP</fullName>
        <columns>NAME</columns>
        <columns>Field3__c</columns>
        <columns>Field35__c</columns>
        <columns>Field19__c</columns>
        <columns>Field20_del__c</columns>
        <columns>Field1__c</columns>
        <columns>Field26__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>3/16/2018 12:00 AM</value>
        </filters>
        <label>IBM/ERP：負け情報</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>ME</fullName>
        <columns>NAME</columns>
        <columns>Field3__c</columns>
        <columns>Field46__c</columns>
        <columns>Field19__c</columns>
        <columns>Field20_del__c</columns>
        <columns>Field1__c</columns>
        <columns>Field26__c</columns>
        <columns>Field10__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Field20_del__c</field>
            <operation>equals</operation>
            <value>CA</value>
        </filters>
        <label>ME競合装置情報</label>
    </listViews>
    <nameField>
        <label>装置名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>